[tool.poetry]
name = "entity-related-papers"
version = "0.1.0"
description = ""
authors = ["7ma7X <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.2"
lxml = "^4.5.2"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
