[tool.poetry]
name = "entity-related-papers"
version = "0.1.0"
description = ""
authors = ["7ma7X <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"
lxml = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
